--- a/EPPS6302_Assignment1.html
+++ b/EPPS6302_Assignment1.html
@@ -163,7 +163,8 @@ ul.task-list li input[type="checkbox"] {
     <h2 id="toc-title">On this page</h2>
    
   <ul>
-  <li><a href="#part-4-write-a-one-page-note-on-designing-your-website" id="toc-part-4-write-a-one-page-note-on-designing-your-website" class="nav-link active" data-scroll-target="#part-4-write-a-one-page-note-on-designing-your-website">Part 4 — Write a one page note on designing your website</a></li>
+  <li><a href="#assignment-1" id="toc-assignment-1" class="nav-link active" data-scroll-target="#assignment-1">Assignment 1</a></li>
+  <li><a href="#part-4-write-a-one-page-note-on-designing-your-website" id="toc-part-4-write-a-one-page-note-on-designing-your-website" class="nav-link" data-scroll-target="#part-4-write-a-one-page-note-on-designing-your-website">Part 4 — Write a one page note on designing your website</a></li>
   <li><a href="#podcast-review-episode-319-building-managing-human-agent-hybrid-teams" id="toc-podcast-review-episode-319-building-managing-human-agent-hybrid-teams" class="nav-link" data-scroll-target="#podcast-review-episode-319-building-managing-human-agent-hybrid-teams">Podcast Review: Episode 319 – Building &amp; Managing Human + Agent Hybrid Teams</a>
   <ul class="collapse">
   <li><a href="#episode-overview" id="toc-episode-overview" class="nav-link" data-scroll-target="#episode-overview">Episode Overview</a></li>
@@ -187,6 +188,9 @@ ul.task-list li input[type="checkbox"] {
 
 
 
+<section id="assignment-1" class="level1">
+<h1>Assignment 1</h1>
+</section>
 <section id="part-4-write-a-one-page-note-on-designing-your-website" class="level1">
 <h1>Part 4 — Write a one page note on designing your website</h1>
 <p>I created my website using Quarto and GitHub Pages to share my assignments, CV, and projects. The layout is simple and professional, with a top navigation bar for easy access to pages like Home, CV, and course assignments. A right-side “On this page” panel helps visitors jump to sections quickly.</p>
