--- a/EPPS6302_Assignment2.html
+++ b/EPPS6302_Assignment2.html
@@ -163,7 +163,8 @@ ul.task-list li input[type="checkbox"] {
     <h2 id="toc-title">On this page</h2>
    
   <ul>
-  <li><a href="#overview" id="toc-overview" class="nav-link active" data-scroll-target="#overview">Overview</a></li>
+  <li><a href="#assignment-2" id="toc-assignment-2" class="nav-link active" data-scroll-target="#assignment-2">Assignment 2</a></li>
+  <li><a href="#overview" id="toc-overview" class="nav-link" data-scroll-target="#overview">Overview</a></li>
   <li><a href="#a-charts" id="toc-a-charts" class="nav-link" data-scroll-target="#a-charts">a) Charts</a>
   <ul class="collapse">
   <li><a href="#google-trends-website-export" id="toc-google-trends-website-export" class="nav-link" data-scroll-target="#google-trends-website-export">1) Google Trends website export</a></li>
@@ -181,6 +182,9 @@ ul.task-list li input[type="checkbox"] {
 
 
 
+<section id="assignment-2" class="level1">
+<h1>Assignment 2</h1>
+</section>
 <section id="overview" class="level1">
 <h1>Overview</h1>
 <p>Search interest for <strong>Trump</strong>, <strong>Kamala Harris</strong>, and <strong>Election</strong> using the Google Trends <strong>website</strong> and using <strong>R (<code>gtrendsR</code>)</strong>.</p>
@@ -203,7 +207,7 @@ ul.task-list li input[type="checkbox"] {
 <ul>
 <li>Website CSV: <a href="./GoogleTrends.csv" download="">GoogleTrends.csv</a><br>
 </li>
-<li>R object (dataframe): <a href="./the_df.rds" download="">the_df.rds</a><br>
+<li>R object (dataframe): <a href="./the_df.zip" download="">the_df.zip</a><br>
 </li>
 <li>R script I used: <a href="./gtrendsR01.R" download="">gtrendsR01.R</a></li>
 </ul>
