--- a/Assignment3.html
+++ b/Assignment3.html
@@ -137,11 +137,11 @@ ul.task-list li input[type="checkbox"] {
  <span class="dropdown-text">Assignment 1</span></a>
   </li>  
         <li>
-    <a class="dropdown-item" href="./EPPS6302_Assignment2.html">
+    <a class="dropdown-item" href="./EPPS6302_Assignment2.qmd">
  <span class="dropdown-text">Assignment 2</span></a>
   </li>  
         <li>
-    <a class="dropdown-item" href="./EPPS6302_Assignment3.html">
+    <a class="dropdown-item" href="./EPPS6302_Assignment3.qmd">
  <span class="dropdown-text">Assignment 3</span></a>
   </li>  
     </ul>
