--- a/index.html
+++ b/index.html
@@ -133,15 +133,15 @@ ul.task-list li input[type="checkbox"] {
     </a>
     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="nav-menu-epps-6302">    
         <li>
-    <a class="dropdown-item" href="./EPPS6302_Assignment1.qmd">
+    <a class="dropdown-item" href="./EPPS6302_Assignment1.html">
  <span class="dropdown-text">Assignment 1</span></a>
   </li>  
         <li>
-    <a class="dropdown-item" href="./EPPS6302_Assignment2.qmd">
+    <a class="dropdown-item" href="./EPPS6302_Assignment2.html">
  <span class="dropdown-text">Assignment 2</span></a>
   </li>  
         <li>
-    <a class="dropdown-item" href="./EPPS6302_Assignment3.qmd">
+    <a class="dropdown-item" href="./EPPS6302_Assignment3.html">
  <span class="dropdown-text">Assignment 3</span></a>
    </li>  
     </ul>
