--- a/EPPS6356_Assignment1.html
+++ b/EPPS6356_Assignment1.html
@@ -156,6 +156,14 @@ ul.task-list li input[type="checkbox"] {
     <a class="dropdown-item" href="./EPPS6356_Assignment1.html">
  <span class="dropdown-text">Assignment 1</span></a>
   </li>  
+        <li>
+    <a class="dropdown-item" href="./EPPS6356_Assignment2.qmd">
+ <span class="dropdown-text">Assignment 2</span></a>
+  </li>  
+        <li>
+    <a class="dropdown-item" href="./EPPS6356_Assignment3.html">
+ <span class="dropdown-text">Assignment 3</span></a>
+  </li>  
     </ul>
   </li>
 </ul>
@@ -231,7 +239,7 @@ ul.task-list li input[type="checkbox"] {
 <a href="https://www.nytimes.com/interactive/2021/us/covid-cases.html" class="uri">https://www.nytimes.com/interactive/2021/us/covid-cases.html</a></p>
 <p><strong>Claim &amp; audience.</strong> The interactive aims to show how COVID-19 cases evolve across U.S. geographies over time, serving a general audience tracking regional surges and declines.</p>
 <p><strong>What works.</strong> - The <strong>map + time-series</strong> pairing supports both geographic and temporal exploration. - Clean styling minimizes clutter; hover interactions surface detail on demand.</p>
-<p><strong>Issues.</strong></p>
+<p><strong>Issues:</strong></p>
 <ol type="1">
 <li><strong>Color encoding/contrast.</strong> Mid-range shades can be hard to distinguish on some displays, reducing perceptual separation between moderate and high values.<br>
 </li>
@@ -245,7 +253,7 @@ ul.task-list li input[type="checkbox"] {
 </li>
 <li><strong>Static use case.</strong> Exporting a static image removes tooltips/hover states, so meaning can be lost without added labels.</li>
 </ol>
-<p><strong>Improvements.</strong></p>
+<p><strong>Improvements:</strong></p>
 <ul>
 <li>Adopt a <strong>colorblind-safe, high-contrast sequential palette</strong> (e.g., <code>viridis</code>) to better separate mid/high values.<br>
 </li>
