--- a/index.html
+++ b/index.html
@@ -133,27 +133,16 @@ ul.task-list li input[type="checkbox"] {
     </a>
     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="nav-menu-epps-6302">    
         <li>
-    <a class="dropdown-item" href="./EPPS6302_Assignment1.html">
+    <a class="dropdown-item" href="./EPPS6302_Assignment1.qmd">
  <span class="dropdown-text">Assignment 1</span></a>
   </li>  
         <li>
-    <a class="dropdown-item" href="./EPPS6302_Assignment2.html">
+    <a class="dropdown-item" href="./EPPS6302_Assignment2.qmd">
  <span class="dropdown-text">Assignment 2</span></a>
   </li>  
         <li>
-    <a class="dropdown-item" href="./EPPS6302_Assignment3.html">
+    <a class="dropdown-item" href="./EPPS6302_Assignment3.qmd">
  <span class="dropdown-text">Assignment 3</span></a>
-   </li>  
-    </ul>
-  </li>
-  <li class="nav-item dropdown ">
-    <a class="nav-link dropdown-toggle" href="#" id="nav-menu-epps-6356" role="link" data-bs-toggle="dropdown" aria-expanded="false">
- <span class="menu-text">EPPS 6356</span>
-    </a>
-    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="nav-menu-epps-6356">    
-        <li>
-    <a class="dropdown-item" href="./EPPS6356_Assignment1.html">
- <span class="dropdown-text">Assignment 1</span></a>
   </li>  
     </ul>
   </li>
