--- a/EPPS6302_Assignment2.html
+++ b/EPPS6302_Assignment2.html
@@ -156,6 +156,14 @@ ul.task-list li input[type="checkbox"] {
     <a class="dropdown-item" href="./EPPS6356_Assignment1.html">
  <span class="dropdown-text">Assignment 1</span></a>
   </li>  
+        <li>
+    <a class="dropdown-item" href="./EPPS6356_Assignment2.qmd">
+ <span class="dropdown-text">Assignment 2</span></a>
+  </li>  
+        <li>
+    <a class="dropdown-item" href="./EPPS6356_Assignment3.html">
+ <span class="dropdown-text">Assignment 3</span></a>
+  </li>  
     </ul>
   </li>
 </ul>
