--- a/Assignment5.html
+++ b/Assignment5.html
@@ -157,7 +157,7 @@ ul.task-list li input[type="checkbox"] {
  <span class="dropdown-text">Assignment 1</span></a>
   </li>  
         <li>
-    <a class="dropdown-item" href="./EPPS6356_Assignment2.qmd">
+    <a class="dropdown-item" href="./EPPS6356_Assignment2.html">
  <span class="dropdown-text">Assignment 2</span></a>
   </li>  
         <li>
