--- a/Assignment6.html
+++ b/Assignment6.html
@@ -192,7 +192,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
  <span class="dropdown-text">Assignment 1</span></a>
   </li>  
         <li>
-    <a class="dropdown-item" href="./EPPS6356_Assignment2.qmd">
+    <a class="dropdown-item" href="./EPPS6356_Assignment2.html">
  <span class="dropdown-text">Assignment 2</span></a>
   </li>  
         <li>
